# Color-Palette-App

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
dominant/: api.py  app.py  clustering.py  main.py  utils.py
tests/: test_dominant.py  test_dominant_api.py  test_dominant_app.py
