[tool.poetry]
name = "dominant"
version = "0.1.0"
description = ""
authors = ["MalarzDawid <github@dawidmalarz.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.5.0"
opencv-python = "^4.5.5"
scikit-learn = "^1.0.2"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "dominant.main:start"
